[CNXC-328] Widen space for Study list by preventing word wrapping

--- a/src/assets/scss/components/SelectionStudy.scss
+++ b/src/assets/scss/components/SelectionStudy.scss
@@ -2,6 +2,7 @@
   padding: 0.8rem;
   line-height: 2;
   cursor: pointer;
+  white-space: nowrap;
 }
 
 
